syntax = "proto3";

package email.v1;

import "google/protobuf/descriptor.proto";

import "google/protobuf/empty.proto";

message BatchDeleteMessagesRequest {
  repeated string ids = 1;
}

message BatchModifyMessagesRequest {
  repeated string add_label_ids = 1;

  repeated string ids = 2;

  repeated string remove_label_ids = 3;
}

message Draft {
  string id = 1;

  Message message = 2;
}

message Label {
  string id = 1;

  string name = 2;

  Type type = 3;

  enum Type {
    SYSTEM = 0;

    USER = 1;
  }
}

message ListDraftsResponse {
  repeated Draft drafts = 1;
}

message ListLabelsResponse {
  repeated Label labels = 1;
}

message ListMessagesResponse {
  repeated Message messages = 1;
}

message ListThreadsResponse {
  repeated Thread threads = 1;
}

message Message {
  string history_id = 1;

  string id = 2;

  string internal_date = 3;

  repeated string label_ids = 4;

  MessagePart payload = 5;

  string raw = 6;

  string snippet = 7;

  string thread_id = 8;
}

message MessagePart {
  MessagePartBody body = 1;

  string filename = 2;

  repeated MessagePartHeader headers = 3;

  string mime_type = 4;

  string part_id = 5;

  repeated MessagePart parts = 6;
}

message MessagePartBody {
  string attachment_id = 1;

  string data = 2;

  int32 size = 3;
}

message MessagePartHeader {
  string name = 1;

  string value = 2;
}

message ModifyMessageRequest {
  repeated string add_label_ids = 1;

  repeated string remove_label_ids = 2;
}

message ModifyThreadRequest {
  repeated string add_label_ids = 1;

  repeated string remove_label_ids = 2;
}

message Thread {
  string history_id = 1;

  string id = 2;

  repeated Message messages = 3;

  string snippet = 4;
}

message DraftsListRequest {
  int64 max_results = 1;
}

message DraftsCreateRequest {
  Draft message_raw = 1;
}

message DraftsSendRequest {
  Draft message_raw = 1;
}

message DraftsGetRequest {
  string id = 1;
}

message DraftsUpdateRequest {
  string id = 1;

  Draft message_raw = 2;
}

message Attachment {
  string upload_id = 1;

  string download_url = 2;

  string filename = 3;

  string mime_type = 4;

  int64 file_size = 5;

  string sha256sum = 6;
}

message DraftsUpdateAttachmentRequest {
  Attachment attachment = 1;
}

message DraftsDeleteRequest {
  string id = 1;
}

message LabelsCreateRequest {
  Label label = 1;
}

message LabelsGetRequest {
  string id = 1;
}

message LabelsUpdateRequest {
  string id = 1;

  Label label = 2;
}

message LabelsDeleteRequest {
  string id = 1;
}

message LabelsPatchRequest {
  string id = 1;

  Label label = 2;
}

message MessagesListRequest {
  repeated string label_ids = 1;

  int64 max_results = 2;
}

message MessagesBatchDeleteRequest {
  BatchDeleteMessagesRequest batch_delete_messages_request = 1;
}

message MessagesBatchModifyRequest {
  BatchModifyMessagesRequest batch_modify_messages_request = 1;
}

message MessagesSendRequest {
  Message message_raw = 1;
}

message MessagesGetRequest {
  string id = 1;
}

message MessagesDeleteRequest {
  string id = 1;
}

message MessagesModifyRequest {
  string id = 1;

  ModifyMessageRequest modify_message_request = 2;
}

message MessagesTrashRequest {
  string id = 1;
}

message MessagesUntrashRequest {
  string id = 1;
}

message MessagesAttachmentsGetRequest {
  string messageId = 1;

  string id = 2;
}

message ThreadsListRequest {
  repeated string label_ids = 1;

  int64 max_results = 2;
}

message ThreadsGetRequest {
  string id = 1;
}

message ThreadsDeleteRequest {
  string id = 1;
}

message ThreadsModifyRequest {
  string id = 1;

  ModifyThreadRequest modify_thread_request = 2;
}

message ThreadsTrashRequest {
  string id = 1;
}

message ThreadsUntrashRequest {
  string id = 1;
}

service Email {
  rpc DraftsList ( DraftsListRequest ) returns ( ListDraftsResponse ) {
  }

  rpc DraftsCreate ( DraftsCreateRequest ) returns ( Draft ) {
  }

  rpc DraftsSend ( DraftsSendRequest ) returns ( Message ) {
  }

  rpc DraftsGet ( DraftsGetRequest ) returns ( Draft ) {
  }

  rpc DraftsUpdate ( DraftsUpdateRequest ) returns ( Draft ) {
  }

  rpc DraftsUpdateAttachment ( DraftsUpdateAttachmentRequest ) returns ( google.protobuf.Empty ) {
  }

  rpc DraftsDelete ( DraftsDeleteRequest ) returns ( google.protobuf.Empty ) {
  }

  rpc LabelsList ( google.protobuf.Empty ) returns ( ListLabelsResponse ) {
  }

  rpc LabelsCreate ( LabelsCreateRequest ) returns ( Label ) {
  }

  rpc LabelsGet ( LabelsGetRequest ) returns ( Label ) {
  }

  rpc LabelsUpdate ( LabelsUpdateRequest ) returns ( Label ) {
  }

  rpc LabelsDelete ( LabelsDeleteRequest ) returns ( google.protobuf.Empty ) {
  }

  rpc LabelsPatch ( LabelsPatchRequest ) returns ( Label ) {
  }

  rpc MessagesList ( MessagesListRequest ) returns ( ListMessagesResponse ) {
  }

  rpc MessagesBatchDelete ( MessagesBatchDeleteRequest ) returns ( google.protobuf.Empty ) {
  }

  rpc MessagesBatchModify ( MessagesBatchModifyRequest ) returns ( google.protobuf.Empty ) {
  }

  rpc MessagesSend ( MessagesSendRequest ) returns ( Message ) {
  }

  rpc MessagesGet ( MessagesGetRequest ) returns ( Message ) {
  }

  rpc MessagesDelete ( MessagesDeleteRequest ) returns ( google.protobuf.Empty ) {
  }

  rpc MessagesModify ( MessagesModifyRequest ) returns ( Message ) {
  }

  rpc MessagesTrash ( MessagesTrashRequest ) returns ( Message ) {
  }

  rpc MessagesUntrash ( MessagesUntrashRequest ) returns ( Message ) {
  }

  rpc MessagesAttachmentsGet ( MessagesAttachmentsGetRequest ) returns ( MessagePartBody ) {
  }

  rpc ThreadsList ( ThreadsListRequest ) returns ( ListThreadsResponse ) {
  }

  rpc ThreadsGet ( ThreadsGetRequest ) returns ( Thread ) {
  }

  rpc ThreadsDelete ( ThreadsDeleteRequest ) returns ( google.protobuf.Empty ) {
  }

  rpc ThreadsModify ( ThreadsModifyRequest ) returns ( Thread ) {
  }

  rpc ThreadsTrash ( ThreadsTrashRequest ) returns ( Thread ) {
  }

  rpc ThreadsUntrash ( ThreadsUntrashRequest ) returns ( Thread ) {
  }
}

